--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Music</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="icon" href="./assets/img/meo.png" type="image/x-icon" />
 
 </head>
 
